[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "djhtml>=3.0.6",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "bandit>=1.7.7",
    "vulture>=2.11",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.4",
]


[tool.vulture]
min_confidence = 100

[tool.pytest.ini_options]
addopts = "--showlocals"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.black]
target-version = ["py310"]
[tool.isort]
profile = "black"
